--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "flamboyx",
   "license": "ISC",
   "dependencies": {
-    "electron": "^27.1.0"
+    "electron": "^27.1.0",
+    "vue": "^3.2.36"
+  },
+  "devDependencies": {
+    "@vue/compiler-sfc": "^3.3.8"
   }
 }
